--- a/Client_App/Views/Forms/Forms1/Form_12.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_12.axaml
@@ -57,8 +57,15 @@
         <vm:Form_12VM/>
     </Design.DataContext>
 
-	<ScrollViewer VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled">
-		<Grid RowDefinitions ="Auto,*,Auto,Auto,Auto">
+		<Grid>
+			<Grid.RowDefinitions>
+				<RowDefinition Height="Auto"></RowDefinition>
+				<RowDefinition Height="Auto"></RowDefinition>
+				<RowDefinition Height="*" MinHeight="175"></RowDefinition>
+				<RowDefinition Height="Auto"></RowDefinition>
+				<RowDefinition Height="Auto"></RowDefinition>
+				<RowDefinition Height="Auto"></RowDefinition>
+			</Grid.RowDefinitions>
 			<WrapPanel
 				Grid.Row ="0"
 				Orientation ="Horizontal">
@@ -116,119 +123,111 @@
 
 				<Button Height="42" Margin="5" > Перевести все РВ в РАО</Button>
 			</WrapPanel>
-			<StackPanel Grid.Row="1">
-				<ScrollViewer HorizontalScrollBarVisibility="Auto"  >
-					<StackPanel Grid.IsSharedSizeScope="True">
-						<Grid>
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="{Binding #dataGrid.Columns[0].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
-								<ColumnDefinition Width="{Binding #dataGrid.Columns[1].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
-								<ColumnDefinition Width="{Binding #dataGrid.Columns[2].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
-								<ColumnDefinition Width="{Binding #dataGrid.Columns[3].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
-								<ColumnDefinition Width="{Binding #dataGrid.Columns[4].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
-								<ColumnDefinition Width="{Binding #dataGrid.Columns[5].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
-								<ColumnDefinition Width="{Binding #dataGrid.Columns[6].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
-								<ColumnDefinition Width="{Binding #dataGrid.Columns[7].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
-								<ColumnDefinition Width="{Binding #dataGrid.Columns[8].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
-								<ColumnDefinition Width="{Binding #dataGrid.Columns[9].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
-								<ColumnDefinition Width="{Binding #dataGrid.Columns[10].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
-								<ColumnDefinition Width="{Binding #dataGrid.Columns[11].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
-								<ColumnDefinition Width="{Binding #dataGrid.Columns[12].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
-								<ColumnDefinition Width="{Binding #dataGrid.Columns[13].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
-								<ColumnDefinition Width="{Binding #dataGrid.Columns[14].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
-								<ColumnDefinition Width="{Binding #dataGrid.Columns[15].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
-								<ColumnDefinition Width="{Binding #dataGrid.Columns[16].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
-								<ColumnDefinition Width="{Binding #dataGrid.Columns[17].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
-								<ColumnDefinition Width="{Binding #dataGrid.Columns[18].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
-								<ColumnDefinition Width="{Binding #dataGrid.Columns[19].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
-							</Grid.ColumnDefinitions>
+			<Grid Grid.Row="1">
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="{Binding #dataGrid.Columns[0].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
+					<ColumnDefinition Width="{Binding #dataGrid.Columns[1].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
+					<ColumnDefinition Width="{Binding #dataGrid.Columns[2].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
+					<ColumnDefinition Width="{Binding #dataGrid.Columns[3].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
+					<ColumnDefinition Width="{Binding #dataGrid.Columns[4].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
+					<ColumnDefinition Width="{Binding #dataGrid.Columns[5].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
+					<ColumnDefinition Width="{Binding #dataGrid.Columns[6].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
+					<ColumnDefinition Width="{Binding #dataGrid.Columns[7].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
+					<ColumnDefinition Width="{Binding #dataGrid.Columns[8].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
+					<ColumnDefinition Width="{Binding #dataGrid.Columns[9].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
+					<ColumnDefinition Width="{Binding #dataGrid.Columns[10].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
+					<ColumnDefinition Width="{Binding #dataGrid.Columns[11].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
+					<ColumnDefinition Width="{Binding #dataGrid.Columns[12].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
+					<ColumnDefinition Width="{Binding #dataGrid.Columns[13].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
+					<ColumnDefinition Width="{Binding #dataGrid.Columns[14].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
+					<ColumnDefinition Width="{Binding #dataGrid.Columns[15].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
+					<ColumnDefinition Width="{Binding #dataGrid.Columns[16].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
+					<ColumnDefinition Width="{Binding #dataGrid.Columns[17].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
+					<ColumnDefinition Width="{Binding #dataGrid.Columns[18].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
+					<ColumnDefinition Width="{Binding #dataGrid.Columns[19].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
+				</Grid.ColumnDefinitions>
+				<TextBlock Grid.Column="0" Grid.ColumnSpan="1" HorizontalAlignment="Stretch"></TextBlock>
+				<TextBlock Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Stretch">Сведения об операции</TextBlock>
+				<TextBlock Grid.Column="3" Grid.ColumnSpan="7" HorizontalAlignment="Stretch">Сведения из паспорта на изделие из обездненного урана</TextBlock>
+				<TextBlock Grid.Column="10" Grid.ColumnSpan="2" HorizontalAlignment="Stretch">Право собственности на ИОУ</TextBlock>
+				<TextBlock Grid.Column="12" Grid.ColumnSpan="3" HorizontalAlignment="Stretch">Документ</TextBlock>
+				<TextBlock Grid.Column="15" Grid.ColumnSpan="2" HorizontalAlignment="Stretch">Код ОКПО</TextBlock>
+				<TextBlock Grid.Column="17" Grid.ColumnSpan="3">Прибор (установка), УКТ или иная упаковка</TextBlock>
+			</Grid>
 
-							<TextBlock Grid.Column="0" Grid.ColumnSpan="1" HorizontalAlignment="Stretch"></TextBlock>
-							<TextBlock Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Stretch">Сведения об операции</TextBlock>
-							<TextBlock Grid.Column="3" Grid.ColumnSpan="7" HorizontalAlignment="Stretch">Сведения из паспорта на изделие из обездненного урана</TextBlock>
-							<TextBlock Grid.Column="10" Grid.ColumnSpan="2" HorizontalAlignment="Stretch">Право собственности на ИОУ</TextBlock>
-							<TextBlock Grid.Column="12" Grid.ColumnSpan="3" HorizontalAlignment="Stretch">Документ</TextBlock>
-							<TextBlock Grid.Column="15" Grid.ColumnSpan="2" HorizontalAlignment="Stretch">Код ОКПО</TextBlock>
-							<TextBlock Grid.Column="17" Grid.ColumnSpan="3">Прибор (установка), УКТ или иная упаковка</TextBlock>
-						</Grid>
-					<DataGrid 
-						x:Name="dataGrid"
-						Items="{Binding FormList}"
-						CanUserResizeColumns="True" 
-						RowBackground="White"
-						AlternatingRowBackground="LightBlue"
-						Margin="5">
-						
-					
-						<DataGrid.Columns>
-
-							<DataGridTextColumn Width="Auto"
-												Header="№ п/п"
-												Binding="{Binding NumberInOrder.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="код" 
-												Binding="{Binding OperationCode.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="дата" 
-												Binding="{Binding OperationDate.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="номер паспорта" 
-												Binding="{Binding PassportNumber.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="наименование" 
-												Binding="{Binding NameIOU.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="номер" 
-												Binding="{Binding FactoryNumber.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="масса обедненного урана, кг" 
-												Binding="{Binding Mass.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="код ОКПО изготовителя" 
-												Binding="{Binding CreatorOKPO.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="дата выпуска" 
-												Binding="{Binding CreationDate.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="НСС, мес" 
-												Binding="{Binding SignedServicePeriod.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="код формы собственности" 
-												Binding="{Binding PropertyCode.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="код ОКПО правообладателя" 
-												Binding="{Binding Owner.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="вид" 
-												Binding="{Binding DocumentVid.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="номер" 
-												Binding="{Binding DocumentNumber.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="дата" 
-												Binding="{Binding DocumentDate.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="поставщика или получателя" 
-												Binding="{Binding ProviderOrRecieverOKPO.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="перевозчика" 
-												Binding="{Binding TransporterOKPO.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="наименование" 
-												Binding="{Binding PackName.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="тип" 
-												Binding="{Binding PackType.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="номер" 
-												Binding="{Binding PackNumber.Value}"/>
-						</DataGrid.Columns>
-					</DataGrid>
-						</StackPanel>
-
-				</ScrollViewer>
-			</StackPanel>
-			<StackPanel Grid.Row="2" Background="{StaticResource PrimaryColor}" Margin="5">
+			<ScrollViewer Grid.Row="2" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" >
+				<DataGrid
+					x:Name="dataGrid"
+					Items="{Binding FormList}"
+					CanUserResizeColumns="True"
+					RowBackground="White"
+					AlternatingRowBackground="LightBlue"
+					Margin="5">
+					<DataGrid.Columns>
+						<DataGridTextColumn Width="Auto"
+											Header="№ п/п"
+											Binding="{Binding NumberInOrder.Value}"/>
+						<DataGridTextColumn Width="Auto"
+											Header="код"
+											Binding="{Binding OperationCode.Value}"/>
+						<DataGridTextColumn Width="Auto"
+											Header="дата"
+											Binding="{Binding OperationDate.Value}"/>
+						<DataGridTextColumn Width="Auto"
+											Header="номер паспорта"
+											Binding="{Binding PassportNumber.Value}"/>
+						<DataGridTextColumn Width="Auto"
+											Header="наименование"
+											Binding="{Binding NameIOU.Value}"/>
+						<DataGridTextColumn Width="Auto"
+											Header="номер"
+											Binding="{Binding FactoryNumber.Value}"/>
+						<DataGridTextColumn Width="Auto"
+											Header="масса обедненного урана, кг"
+											Binding="{Binding Mass.Value}"/>
+						<DataGridTextColumn Width="Auto"
+											Header="код ОКПО изготовителя"
+											Binding="{Binding CreatorOKPO.Value}"/>
+						<DataGridTextColumn Width="Auto"
+											Header="дата выпуска"
+											Binding="{Binding CreationDate.Value}"/>
+						<DataGridTextColumn Width="Auto"
+											Header="НСС, мес"
+											Binding="{Binding SignedServicePeriod.Value}"/>
+						<DataGridTextColumn Width="Auto"
+											Header="код формы собственности"
+											Binding="{Binding PropertyCode.Value}"/>
+						<DataGridTextColumn Width="Auto"
+											Header="код ОКПО правообладателя"
+											Binding="{Binding Owner.Value}"/>
+						<DataGridTextColumn Width="Auto"
+											Header="вид"
+											Binding="{Binding DocumentVid.Value}"/>
+						<DataGridTextColumn Width="Auto"
+											Header="номер"
+											Binding="{Binding DocumentNumber.Value}"/>
+						<DataGridTextColumn Width="Auto"
+											Header="дата"
+											Binding="{Binding DocumentDate.Value}"/>
+						<DataGridTextColumn Width="Auto"
+											Header="поставщика или получателя"
+											Binding="{Binding ProviderOrRecieverOKPO.Value}"/>
+						<DataGridTextColumn Width="Auto"
+											Header="перевозчика"
+											Binding="{Binding TransporterOKPO.Value}"/>
+						<DataGridTextColumn Width="Auto"
+											Header="наименование"
+											Binding="{Binding PackName.Value}"/>
+						<DataGridTextColumn Width="Auto"
+											Header="тип"
+											Binding="{Binding PackType.Value}"/>
+						<DataGridTextColumn Width="Auto"
+											Header="номер"
+											Binding="{Binding PackNumber.Value}"/>
+					</DataGrid.Columns>
+				</DataGrid>
+			</ScrollViewer>
+			<StackPanel Grid.Row="3" Background="{StaticResource PrimaryColor}" Margin="5">
 				<StackPanel Orientation ="Horizontal">
 					<TextBlock Margin="5">Кол-во страниц:</TextBlock>
 					<TextBlock Margin="5" Text="{Binding PageCount}"></TextBlock>
@@ -238,7 +237,7 @@
 					<TextBlock Margin="5" Text="{Binding CurrentReport.Rows12.Count}"></TextBlock>
 				</StackPanel>
 			</StackPanel>
-			<StackPanel Grid.Row="3" Background="{StaticResource PrimaryColor}" Margin="5">
+			<StackPanel Grid.Row="4" Background="{StaticResource PrimaryColor}" Margin="5">
 				<StackPanel Orientation ="Horizontal">
 					<TextBlock Margin="5">Кол-во строчек на странице</TextBlock>
 					<NumericUpDown Margin="5" Value="{Binding RowCount}" Minimum="1" TextInput="TextBox_TextInput" KeyDown="TextBox_PreviewKeyDown"/>
@@ -248,7 +247,7 @@
 					<NumericUpDown Margin="5" Value="{Binding CurrentPage}" Minimum="1" Maximum="{Binding PageCount}"  TextInput="TextBox_TextInput" KeyDown="TextBox_PreviewKeyDown"/>
 				</StackPanel>
 			</StackPanel>
-			<StackPanel Grid.Row="4" Background="{StaticResource PrimaryColor}" Margin="5">
+			<StackPanel Grid.Row="5" Background="{StaticResource PrimaryColor}" Margin="5">
 				<TextBlock Margin="5">Примечания</TextBlock>
 				<DataGrid Margin="5" >
 					<DataGrid.Columns>
@@ -260,5 +259,4 @@
 			</StackPanel>
 		
 		</Grid>
-	</ScrollViewer>
 </Window>
