--- a/Client_App/Views/Forms/Forms1/Form_12.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_12.axaml
@@ -73,28 +73,27 @@
 			
 			<WrapPanel
 				Grid.Row ="1"
-				Orientation ="Horizontal">
+				Orientation ="Horizontal"
+				IsVisible="{Binding IsHeaderExpanded}">
 					
-				<Border Margin="5" BorderBrush ="Black" BorderThickness ="1" CornerRadius ="5" IsVisible="{Binding IsHeaderExpanded}">
+				<Border Margin="5" BorderBrush ="Black" BorderThickness ="1" CornerRadius ="5">
 					<Grid Margin="5" RowDefinitions ="*,*,*,*,*">
 						<Grid ColumnDefinitions="*,*"  Grid.Row="0">
 							<TextBlock Grid.Column="0" Margin="5" >Дата окончания предыдущего отчетного периода:</TextBlock>
-							<TextBox Grid.Column="1" 
-                                IsReadOnly="True"
-                                Text="{Binding Path=CurrentReport.StartPeriod_DB, Mode=OneTime}"/>
+							<CalendarDatePicker Grid.Column="1" 
+                                SelectedDate="{Binding Path=CurrentReport.StartPeriod.Value}"/>
 						</Grid>
 
 						<Grid ColumnDefinitions="*,*"  Grid.Row="1">
 							<TextBlock Grid.Column="0" Margin="5" >Дата окончания настоящего отчетного периода:</TextBlock>
-							<TextBox Grid.Column="1" 
-                                IsReadOnly="True"
-                                Text="{Binding Path=CurrentReport.EndPeriod_DB, Mode=OneTime}"/>
+							<CalendarDatePicker Grid.Column="1" 
+                                SelectedDate="{Binding Path=CurrentReport.EndPeriod.Value}"/>
 						</Grid>
 
 						<StackPanel  Orientation="Horizontal" Grid.Row="2">
 							<TextBlock Margin="5">Номер корректировки:</TextBlock>
 							<TextBox Margin="5" Width="75"  IsReadOnly="True"
-                                Text="{Binding Path=CurrentReport.CorrectionNumber_DB, Mode=OneTime}"></TextBox>
+                                Text="{Binding Path=CurrentReport.CorrectionNumber.Value, Mode=OneTime}"></TextBox>
 						</StackPanel>
 
 						<StackPanel Orientation="Horizontal" Grid.Row="3">
@@ -109,24 +108,24 @@
 					</Grid>
 				</Border>
 
-				<Border Margin="5" BorderBrush="Black" BorderThickness="1" CornerRadius="5" IsVisible="{Binding IsHeaderExpanded}">
+				<Border Margin="5" BorderBrush="Black" BorderThickness="1" CornerRadius="5">
 					<Grid Margin="5" RowDefinitions ="*,*,*,*,*" ColumnDefinitions="*,2*">
 						<TextBlock Grid.Row="0" Grid.Column="0" Margin="5" >ФИО исполнителя:</TextBlock>
 						<TextBox Grid.Row="0" Grid.Column="1" Margin="5"  IsReadOnly="True"
-                                Text="{Binding Path=CurrentReport.FIOexecutor_DB, Mode=OneTime}"></TextBox>
+                                Text="{Binding Path=CurrentReport.FIOexecutor.Value, Mode=OneTime}"></TextBox>
 						<TextBlock Grid.Row="1" Grid.Column="0" Margin="5" >Должность:</TextBlock>
 						<TextBox Grid.Row="1" Grid.Column="1" Margin="5" IsReadOnly="True"
-                                Text="{Binding Path=CurrentReport.GradeExecutor_DB, Mode=OneTime}" ></TextBox>
+                                Text="{Binding Path=CurrentReport.GradeExecutor.Value, Mode=OneTime}" ></TextBox>
 						<TextBlock Grid.Row="2" Grid.Column="0" Margin="5" >Телефон:</TextBlock>
 						<TextBox Grid.Row="2" Grid.Column="1" Margin="5" IsReadOnly="True"
-                                Text="{Binding Path=CurrentReport.ExecPhone_DB, Mode=OneTime}"></TextBox>
+                                Text="{Binding Path=CurrentReport.ExecPhone.Value, Mode=OneTime}"></TextBox>
 						<TextBlock Grid.Row="3" Grid.Column="0" Margin="5" >Электронная почта:</TextBlock>
 						<TextBox Grid.Row="3" Grid.Column="1" Margin="5" IsReadOnly="True"
-                                Text="{Binding Path=CurrentReport.ExecEmail_DB, Mode=OneTime}"></TextBox>
+                                Text="{Binding Path=CurrentReport.ExecEmail.Value, Mode=OneTime}"></TextBox>
 						<Button Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" >Скопировать данные предыдущей формы</Button>
 					</Grid>
 				</Border>
-				<Button Height="30" Margin="5"  IsVisible="{Binding IsHeaderExpanded}"> Перевести все РВ в РАО</Button>
+				<Button Height="30" Margin="5"> Перевести все РВ в РАО</Button>
 				
 				
 			</WrapPanel>
@@ -179,9 +178,16 @@
 							<DataGridTextColumn Width="Auto"
 												Header="код"
 												Binding="{Binding OperationCode.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="дата"
-												Binding="{Binding OperationDate.Value}"/>
+							<DataGridTemplateColumn Header="дата" Width="Auto">
+								<DataGridTemplateColumn.CellTemplate>
+									<DataTemplate>
+										<CalendarDatePicker
+											SelectedDate="{Binding OperationDate.Value}"
+											HorizontalAlignment="Stretch"
+											VerticalAlignment="Center"/>
+									</DataTemplate>
+								</DataGridTemplateColumn.CellTemplate>
+							</DataGridTemplateColumn>
 							<DataGridTextColumn Width="Auto"
 												Header="номер паспорта"
 												Binding="{Binding PassportNumber.Value}"/>
@@ -197,9 +203,16 @@
 							<DataGridTextColumn Width="Auto"
 												Header="код ОКПО изготовителя"
 												Binding="{Binding CreatorOKPO.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="дата выпуска"
-												Binding="{Binding CreationDate.Value}"/>
+							<DataGridTemplateColumn Header="дата выпуска" Width="Auto">
+								<DataGridTemplateColumn.CellTemplate>
+									<DataTemplate>
+										<CalendarDatePicker
+											SelectedDate="{Binding CreationDate.Value}"
+											HorizontalAlignment="Stretch"
+											VerticalAlignment="Center"/>
+									</DataTemplate>
+								</DataGridTemplateColumn.CellTemplate>
+							</DataGridTemplateColumn>
 							<DataGridTextColumn Width="Auto"
 												Header="НСС, мес"
 												Binding="{Binding SignedServicePeriod.Value}"/>
@@ -215,9 +228,16 @@
 							<DataGridTextColumn Width="Auto"
 												Header="номер"
 												Binding="{Binding DocumentNumber.Value}"/>
-							<DataGridTextColumn Width="Auto"
-												Header="дата"
-												Binding="{Binding DocumentDate.Value}"/>
+							<DataGridTemplateColumn Header="дата" Width="Auto">
+								<DataGridTemplateColumn.CellTemplate>
+									<DataTemplate>
+										<CalendarDatePicker
+											SelectedDate="{Binding DocumentDate.Value}"
+											HorizontalAlignment="Stretch"
+											VerticalAlignment="Center"/>
+									</DataTemplate>
+								</DataGridTemplateColumn.CellTemplate>
+							</DataGridTemplateColumn>
 							<DataGridTextColumn Width="Auto"
 												Header="поставщика или получателя"
 												Binding="{Binding ProviderOrRecieverOKPO.Value}"/>
@@ -264,7 +284,6 @@
 					Grid.Row="1" Grid.Column="2" Margin="5"/>
 				<TextBlock Text="{Binding CurrentReport.Rows12.Count}"
 					Grid.Row="1" Grid.Column="3" Margin="5"/>
-				
 				
 			</Grid>
 					
