--- a/Client_App/Views/Forms/Forms1/Form_12.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_12.axaml
@@ -122,7 +122,7 @@
 						<TextBlock Grid.Row="3" Grid.Column="0" Margin="5" >Электронная почта:</TextBlock>
 						<TextBox Grid.Row="3" Grid.Column="1" Margin="5" IsReadOnly="True"
                                 Text="{Binding Path=CurrentReport.ExecEmail.Value}"></TextBox>
-						<Button Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" >Скопировать данные предыдущей формы</Button>
+						<Button Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" Click="CopyExecutorData_Click">Скопировать данные предыдущей формы</Button>
 					</Grid>
 				</Border>
 				<Button Height="30" Margin="5"> Перевести все РВ в РАО</Button>
