--- a/Client_App/Views/Forms/Forms1/Form_12.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_12.axaml
@@ -103,7 +103,7 @@
 
 						<StackPanel Orientation="Horizontal"  Grid.Row="4">
 							<TextBlock Margin="5" >Автозаполнение:</TextBlock>
-							<CheckBox Margin="5" ></CheckBox>
+							<CheckBox Margin="5" IsChecked="{Binding IsAutoReplaceEnabled}"></CheckBox>
 						</StackPanel>
 					</Grid>
 				</Border>
@@ -125,7 +125,7 @@
 						<Button Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" Click="CopyExecutorData_Click">Скопировать данные предыдущей формы</Button>
 					</Grid>
 				</Border>
-				<Button Height="30" Margin="5"> Перевести все РВ в РАО</Button>
+				<Button Height="30" Margin="5" Command="{Binding SourceTransmissionAll}"> Перевести все РВ в РАО</Button>
 				
 				
 			</WrapPanel>
@@ -133,6 +133,24 @@
 
 			<ScrollViewer Grid.Row="2" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
 				<Grid RowDefinitions="Auto,*">
+					<Grid.ContextMenu>
+						<ContextMenu>
+							<MenuItem Header="Выделить всё"/>
+							<MenuItem Header="Добавить строку" 
+									  Command="{Binding AddRow}"/>
+							<MenuItem Header="Добавить N строк" 
+									  Command="{Binding AddRows}"
+									  CommandParameter="{Binding $parent[Window]}"/>
+							<MenuItem Header="Добавить N строк перед" 
+									  Command="{Binding AddRowsIn}"
+									  CommandParameter="{Binding $parent[Window]}"/>
+							<MenuItem Header="Копировать"> </MenuItem>
+							<MenuItem Header="Вставить"> </MenuItem>
+							<MenuItem Header="Удалить строку"> </MenuItem>
+							<MenuItem Header="Выставить номер"> </MenuItem>
+							<MenuItem Header="Сортировать по номеру п/п"> </MenuItem>
+						</ContextMenu>
+					</Grid.ContextMenu>
 					<Grid Grid.Row="0">
 						<Grid.ColumnDefinitions>
 							<ColumnDefinition Width="{Binding #dataGrid.Columns[0].Width,  Converter={StaticResource LengthConverter}}"></ColumnDefinition>
@@ -270,7 +288,7 @@
 				
 				<TextBlock Text ="Кол-во страниц:"
 					Grid.Row="0" Grid.Column="2" Margin="5"/>
-				<TextBlock Text="{Binding PageCount}"
+				<TextBlock Text="{Binding TotalPages}"
 					Grid.Row="0" Grid.Column="3" Margin="5"/>
 				
 				<TextBlock Text="Кол-во строчек на странице"
@@ -282,7 +300,7 @@
 				
 				<TextBlock Text="Всего строчек:"
 					Grid.Row="1" Grid.Column="2" Margin="5"/>
-				<TextBlock Text="{Binding CurrentReport.Rows12.Count}"
+				<TextBlock Text="{Binding TotalRows}"
 					Grid.Row="1" Grid.Column="3" Margin="5"/>
 				
 			</Grid>
